kustomize/libki-server/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: libki
    namespace: libki
spec:
    type: NodePort
    ports:
        - port: 443
          nodePort: 30004
    selector:
        app: libki
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
    name: libki
    namespace: libki
spec:
    selector:
        matchLabels:
            app: libki
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                app: libki
        spec:
            containers:
                - name: libki
                  image: enghabu/libki-server:0.4
                  resources:
                      requests:
                          memory: 100Mi
                          cpu: 100m
                      limits:
                          memory: 500Mi
                          cpu: 200m
                  # image: libki/libki-server:latest
                  #   command:
                  #     - ./script/libki_server.pl
                  #   args:
                  #     - -p
                  #     - "443"
                  ports:
                      - containerPort: 443
                        name: libki
---
